navigation 추가(bottom navigation)

--- a/app/src/main/res/navigation/nav_garden.xml
+++ b/app/src/main/res/navigation/nav_garden.xml
@@ -2,16 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_garden">
+    android:id="@+id/nav_garden"
+    app:startDestination="@id/home">
 
-    <fragment
-        tools:layout="@layout/fragment_home_series_list">
-
-        <action
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
-    </fragment>
-
+    <include app:graph="@navigation/home_graph"></include>
 </navigation>
