--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.series_collector.HomeFragment"
+        android:name="com.example.series_collector.ui.home.HomeFragment"
         android:label="fragment_calendar"
         tools:layout="@layout/fragment_home_series_list">
 
