--- a/app/src/main/res/layout/fragment_home_series_list.xml
+++ b/app/src/main/res/layout/fragment_home_series_list.xml
@@ -3,10 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="isLoading"
+            type="boolean" />
+    </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:isGone="@{!isLoading}"
+            android:progressDrawable="@drawable/circular_progress_bar"></ProgressBar>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChapters"
