중첩 리사이클러뷰 어댑터 추가

--- a/app/src/main/res/layout/fragment_home_series_list.xml
+++ b/app/src/main/res/layout/fragment_home_series_list.xml
@@ -24,7 +24,7 @@
             android:progressDrawable="@drawable/circular_progress_bar"></ProgressBar>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvChapters"
+            android:id="@+id/rvCategorys"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/home_side_margin"
