--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="category"
+            type="com.example.series_collector.data.Category"/>
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,14 +25,15 @@
                 android:id="@+id/tvSubjectName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title"
+                android:text="@{category.title}"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:textStyle="bold"
                 android:textColor="?attr/colorOnPrimary"
+                tools:text="인기 시리즈"
               />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvChapters"
+                android:id="@+id/rvSeries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
