--- a/app/src/main/res/layout/list_item_home_series.xml
+++ b/app/src/main/res/layout/list_item_home_series.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="series"
+            type="com.example.series_collector.data.Series" />
+    </data>
+
     <androidx.cardview.widget.CardView
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -33,6 +39,7 @@
                 android:textAppearance="?attr/textAppearanceListItem"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:text="@{series.name}"
                 android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintTop_toBottomOf="@id/series_item_thumbnail"
                 tools:text="Series 1" />
@@ -42,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="?attr/colorSecondary"
+                android:text="@{series.channel}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 app:layout_constraintTop_toBottomOf="@+id/series_item_title"
                 tools:text="channel_name1" />
