--- a/app/src/main/res/layout/list_item_home_series.xml
+++ b/app/src/main/res/layout/list_item_home_series.xml
@@ -28,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:scaleType="centerCrop"
+                android:background="?attr/colorOnPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
