--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -8,8 +8,22 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.series_collector.ui.home.HomeFragment"
-        android:label="fragment_calendar"
+        android:label="fragment_home"
         tools:layout="@layout/fragment_home_series_list">
+        <action
+            android:id="@+id/action_home_fragment_to_detail_fragment"
+            app:destination="@id/detailFragment" />
 
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.series_collector.ui.detail.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail_series">
+
+        <argument
+            android:name="seriesId"
+            app:argType="string" />
     </fragment>
 </navigation>
