--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,13 @@
 
     <dimen name="home_header_margin">72dp</dimen>
 
+    <dimen name="detail_header_margin">56dp</dimen>
+
+    <dimen name="detail_thumbnail_image_height">200dp</dimen>
+
+    <dimen name="detail_series_item_image_height">120dp</dimen>
+    <dimen name="detail_series_item_image_width">200dp</dimen>
+    <dimen name="detail_series_play_btn_size">30dp</dimen>
+
+
 </resources>
