--- a/app/src/main/res/layout/fragment_home_series_list.xml
+++ b/app/src/main/res/layout/fragment_home_series_list.xml
@@ -20,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:isGone="@{!viewModel.isLoading}"
-            android:progressDrawable="@drawable/circular_progress_bar"></ProgressBar>
+            android:indeterminateTint="@color/sc_pink"
+            app:isGone="@{!viewModel.isLoading}"></ProgressBar>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCategorys"
