--- a/app/src/main/res/layout/list_item_series_video.xml
+++ b/app/src/main/res/layout/list_item_series_video.xml
@@ -23,8 +23,8 @@
 
             <ImageView
                 android:id="@+id/video_item_thumbnail"
-                android:layout_width="@dimen/detail_series_item_image_width"
-                android:layout_height="@dimen/detail_series_item_image_height"
+                android:layout_width="@dimen/series_item_image_width_normal"
+                android:layout_height="@dimen/series_item_image_height_normal"
                 android:background="?attr/colorSecondary"
                 android:scaleType="centerCrop"
                 app:imageFromUrl="@{seriesVideo.snippet.thumbnails.standard.url}" />
@@ -37,7 +37,7 @@
                 android:text="@{seriesVideo.snippet.title}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="?attr/colorOnPrimary"
-                tools:text="Series name1" />
+                tools:text="Series title" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
