--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -3,8 +3,11 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="홈"
-        />
+        android:title="홈" />
 
+    <item
+        android:id="@+id/inventory"
+        android:icon="@drawable/ic_baseline_inventory_24"
+        android:title="보관함" />
 
 </menu>
