--- a/app/src/main/res/navigation/nav_garden.xml
+++ b/app/src/main/res/navigation/nav_garden.xml
@@ -6,4 +6,7 @@
     app:startDestination="@id/home">
 
     <include app:graph="@navigation/home_graph"></include>
+    <include app:graph="@navigation/inventory_graph"></include>
+
+
 </navigation>
