--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="span">1</integer>
+
+    <integer name="detail_descpription_max_lines">4</integer>
+    <integer name="inventory_descpription_max_lines">4</integer>
 </resources>
