홈, 디테일 레이아웃 변경 및 카테고리 2줄씩 보여지는 것으로 변경

--- a/app/src/main/res/layout/fragment_home_series.xml
+++ b/app/src/main/res/layout/fragment_home_series.xml
@@ -30,6 +30,7 @@
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginStart="12dp"
+                app:expandedTitleMarginBottom="16dp"
                 app:expandedTitleTextAppearance="@style/Toolbar.TitleText"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar">
@@ -43,6 +44,7 @@
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
+
 
         <ProgressBar
             android:id="@+id/progress_circular"
@@ -68,3 +70,4 @@
 
 
 </layout>
+
