--- a/app/src/main/res/layout/list_item_home_series.xml
+++ b/app/src/main/res/layout/list_item_home_series.xml
@@ -33,8 +33,8 @@
                 android:id="@+id/series_item_thumbnail"
                 android:layout_width="@dimen/home_series_item_image_width"
                 android:layout_height="@dimen/home_series_item_image_height"
-                android:background="?attr/colorOnPrimary"
                 android:scaleType="centerCrop"
+                android:background="@drawable/round_radius_shape"
                 app:imageFromUrl="@{series.thumbnail}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
