--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -28,6 +28,7 @@
                 android:text="@{category.title}"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:textStyle="bold"
+                android:paddingBottom="6dp"
                 android:textColor="?attr/colorOnPrimary"
                 tools:text="인기 시리즈"
               />
