entity 패키지 추가

--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="category"
-            type="com.example.series_collector.data.Category"/>
+            type="com.example.series_collector.data.entitiy.Category"/>
     </data>
 
     <LinearLayout
